k3s/k8s.argocd.ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-server
  labels:
    k8s-app: argocd-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "argocd.highr.ai"
    secretName: argocd-highr-tls
  rules:
  - host: argocd.highr.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: 443
