k3s/k8s.traefik.dashboard.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik.k3s.dus.waigant.io
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-dashboard
          servicePort: 9000
